Prevent breadcrumbs with long crumbs from clipping at narrow viewports.

--- a/source/wp-content/themes/wporg-developer/scss/main.scss
+++ b/source/wp-content/themes/wporg-developer/scss/main.scss
@@ -469,6 +469,7 @@
 
 	.breadcrumb-trail {
 		margin-bottom: 2rem;
+		overflow-wrap: break-word;
 
 		a {
 			text-decoration: none;
